# lung-cancer-detection-api

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  deploy.py  docker-compose.yml  nginx.conf  pyproject.toml  requirements-local.txt  requirements.txt  start_server.py
app/: main.py
app/api/v1/: endpoints.py
app/core/: config.py  logging.py
app/schemas/: prediction.py
app/services/: image_processor.py
models/: .gitkeep  lung_cancer_model.h5
tests/: test_api.py
